# Virgo-Core

./: .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .mise.toml  .opentofu-version  .pre-commit-config.yaml  .terraform-docs.yml  CHANGELOG.md  CLAUDE.md  README.md  conductor-setup.sh  conductor.json  pyproject.toml  renovate.json
.claude/commands/: branch-cleanup.md
.claude/research-reports/: ansible-research-20251006-162853.md  microk8s-ansible-research-20251008-232830.md
.claude/skills/: README.md
.devcontainer/: devcontainer.json
.github/workflows/: use-sync-labels.yml
ai_docs/: knowledgebase-uv-single-file-scripts.md  uv-single-file-scripts.md
ai_docs/netbox/: llms-api-full.txt  llms-full.txt  llms.txt
ansible/: .ansible-lint  .ansible-lint-ignore  CHANGES.md  LINTING.md  ansible.cfg  requirements.yml
ansible/inventory/: hosts.yml  proxmox.yml
ansible/playbooks/: add-file-to-host.yml  add-system-user.yml  configure-network.yml  create-admin-user.yml  initialize-matrix-cluster.yml  proxmox-build-template.yml  setup-terraform-automation.yml
ansible/tasks/: infisical-secret-lookup.yml
ansible/templates/: sudoers.j2
docs/: ansible-migration-plan.md  ansible-philosophy.md  ansible-playbook-design.md  ansible-role-design.md  goals.md  infrastructure.md  netbox-powerdns.md  pr21-aar.md  proxspray-analysis.md  referances.md  skills-planning.md  testing-validation-results.md
docs/action-items/: 2025-10-23-research-summary.md  (+1 more)
scripts/: firecrawl_sdk_research.py  firecrawl_sdk_research.py.README.md
(+123 files in other folders)
